2006-07-03  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh:
	  + Uses -eq instead of = when testing BM_TARBALLINC_MASTERDATEVALUE
	  (closes: #104).

2006-06-30  Alexis Sukrieh  <sukria@backup-manager.org>
	
	[ Support for non-Joliet disc images (closes: #89) ]
	* backup-manager.conf.tpl:
	  + New variable BM_BURNING_ISO_FLAGS for letting the suer choose which
	    disc image to use (default "-R -J").
	* doc/user-guide.sgml:
	  + Bits about BM_BURNING_ISO_FLAGS
	* lib/burning-methods.sh:
	  + Default BM_BURNING_ISO_FLAGS to "-R -J" if not defined for backward 
	    compatibility.
	  + Uses $BM_BURNING_ISO_FLAGS instead of "-R -J" in mkisofs/growisofs
	    commands. 

2006-06-29  Alexis Sukrieh <sukria@backup-manager.org>

	* lib/burning-methods.sh:
	  + Correct syntax for the "-use-the-force-luke=tty" option in growisofs
	  command lines (Thanks to Rached Ben Mustapha).

2006-06-29  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/burning-methods.sh:
	  + Apply patch for adding the "-use-the-force-luke" switch in growisofs
	  commands, possible to burn DVD+RW media within the CRON environement.
	  (closes #102)

2006-06-27  Alexis Sukrieh  <sukria@backup-manager.org>
	
	[ support for tar.lz archives ] 
	* backup-manager:
	  + path to /usr/bin/lzma
	* backup-manager.conf.tpl:
	  + adding support for BM_TARBALL_FILETYPE = tar.lz
	* doc/user-guide.sgml:
	* doc/user-guide.txt:
	  + Bits in the documentation about tar.lz
	* lib/backup-methods.sh:
	  + command line for building tar.lz archives

2006-06-21  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + VERSION = 0.7.4
	* backup-manager.conf.tpl:
	  + New variables, BM_UPLOAD_SSH_PURGE / BM_UPLOAD_SSH_PURGE
	  + BM_TARBALL_OVER_SSH set to false by default.
	* doc/user-guide.sgml, doc/user-guide.txt:
	  + Bits about SSH purging.
	* lib/backup-methods.sh:

2006-06-21  Alexis Sukrieh  <sukria@backup-manager.org>

	* NEWS:
	  + Notes about last bug closed, #83).